--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.7",
     "express": "^4.21.1",
     "firebase": "^10.14.1",
+    "firebase-admin": "^12.7.0",
     "mongoose": "^8.7.1",
     "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
